# arduino-MidiHxSnapshotControl

./: .codespellrc  .gitattributes  .gitignore  CONTRIBUTING.md  README.md
doc/: architecture.puml  remote.puml
src/arduino-library/: CMakeLists.txt
src/arduino-library/MidiHxSnapshotControl/: keywords.txt  library.properties
src/arduino-library/MidiHxSnapshotControl/src/: HxController.h  HxRemote.h  ISerialReader.h  ISerialWriter.h  ISleep.h
src/arduino-library/MidiHxSnapshotControl/src/controller/: HxController.cpp  ISignalComposer.h  MidiComposer.cpp  MidiComposer.h  UartComposer.cpp  UartComposer.h  util.h  vector.h
src/arduino-library/MidiHxSnapshotControl/src/remote/: HxRemote.cpp  InputManager.cpp  InputManager.h
src/arduino-library/doc/: documentation.dox  doxygen.in
src/arduino-library/tests/MidiHxSnapshotControl/: TestHxController.cpp
src/arduino-library/tests/mocks/: SerialReaderMock.cpp  SerialReaderMock.h
